@@ -1106,7 +1106,7 @@ extern int down_nodecard(char *bp_name, bitoff_t io_start)
 		   opposed to draining the node.  
 		*/
 		if(smallest_bg_record 
-		   && (smallest_bg_record->node_cnt <= bg_conf->bp_node_cnt)){
+		   && (smallest_bg_record->node_cnt < bg_conf->bp_node_cnt)){
 			if(smallest_bg_record->state == RM_PARTITION_ERROR) {
 				rc = SLURM_NO_CHANGE_IN_DATA;
 				goto cleanup;
@@ -1117,7 +1117,8 @@ extern int down_nodecard(char *bp_name, bitoff_t io_start)
 			goto cleanup;
 		} 
 		
-		debug("didn't get a smallest block");
+		debug("No block under 1 midplane available for this nodecard.  "
+		      "Draining the whole node.");
 		if(!node_already_down(bp_name)) {
 			slurm_drain_nodes(bp_name, reason);
 		}
